classDiagram
    class Customer {
        +String name
        +String email
        +String phone
        +register()
        +login()
        +updateProfile()
    }
    
    class Order {
        +Integer orderId
        +Date orderDate
        +Float totalAmount
        +String status
        +placeOrder()
        +cancelOrder()
        +processPayment()
    }
    
    class Product {
        +Integer productId
        +String name
        +String description
        +Float price
        +Integer inventory
        +addToCart()
        +updateInventory()
    }
    
    class ShoppingCart {
        +Integer cartId
        +Integer quantity
        +Float totalPrice
        +addItem()
        +removeItem()
        +updateQuantity()
        +checkout()
    }
    
    Customer "1" --> "*" Order : places
    Customer "1" --> "1" ShoppingCart : has
    ShoppingCart "*" --> "*" Product : contains 